Changed size of hero image to avoid blurring

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ h1, h2 {
 #hero-image {
     height: 900px;
     width: 100%;
-    background: url(../images/hero-image.png) no-repeat center center;
+    background: url(/../assets/images/hero-image.png) no-repeat center center;
     /* background-size: cover; */
    
 
